# Baixar-Videos-Privados

./: .env.example  .gitignore  README.md  download_link.bat  publish_local.bat  pyproject.toml  run_tests.bat  start_api.bat  test.html
docs/: architecture-base.md
docs/ADR/: ADR-001-arquitetura-base-autorizacao-e-falha-controlada.md  ADR-002-fundacao-tecnica-python-fase-1.md  ADR-003-fase-2-fila-idempotencia-status-retry.md  ADR-004-cancelamento-fila-redis-opcional-e-testes-integracao.md  ADR-005-cancelamento-cooperativo-em-processing.md  ADR-006-script-bat-operacional-windows.md  ADR-007-script-bat-testes-windows.md  ADR-008-download-real-por-url-autorizada.md  ADR-009-expansao-plataformas-sociais-com-extractor-opcional.md  ADR-010-operacao-producao-local-sqlite-seguranca-observabilidade.md  ADR-011-integracao-chrome-edge-via-extensao.md  ADR-012-tuning-de-concorrencia-no-extractor-hls.md  README.md
integrations/browser-extension/: README.md  background.js  manifest.json  popup.css  popup.html  popup.js
scripts/: download_from_cmd.py
src/: main.py
src/api/controllers/: download_controller.py
tests/integration/: test_authorized_url_download.py  test_provider_failure_modes.py
tests/unit/: test_api_security_and_file_token.py  test_cancel_download_use_case.py  test_download_api.py  test_platform_extractor_format_resolution.py  test_platform_extractor_pandavideo_resolution.py  test_platform_extractor_support_hosts.py  test_platform_link_provider.py  test_process_download_job_cancellation.py  test_process_download_job_platform_extractor.py
(+35 files in other folders)
