[project]
name = "baixar-videos-privados"
version = "0.1.0"
description = "API base para orquestracao de downloads autorizados com arquitetura modular."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "cachetools>=5.4.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]
redis = [
  "redis>=5.0.0",
]
extractor = [
  "yt-dlp>=2024.12.13",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
